@@ -15,15 +15,23 @@ REM without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTIC
 REM See the GNU General Public License for more details.
 REM
 REM
-REM Copyright 2011 - 2018 Hitachi Vantara.  All rights reserved.
+REM Copyright 2011 - ${copyright.year} Hitachi Vantara. All rights reserved.
 REM *******************************************************************************************
 
 setlocal
 cd /D %~dp0
+cscript promptuser.js //nologo //e:jscript
+rem errorlevel 0 means user chose "no"
+if %errorlevel%==0 goto quit
+echo WScript.Quit(1); > promptuser.js
+
 call set-pentaho-env.bat "%~dp0jre"
 
 cd tomcat\bin
 set CATALINA_HOME=%~dp0tomcat
+SET DI_HOME="%~dp0pentaho-solutions\system\kettle"
+
+set CATALINA_OPTS=-Xms2048m -Xmx6144m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8044 -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=utf8 -DDI_HOME=%DI_HOME%
 
 rem Make sure we set the appropriate variable so Tomcat can start (e.g. JAVA_HOME iff. _PENTAHO_JAVA_HOME points to a JDK)
 if not exist "%_PENTAHO_JAVA_HOME%\bin\jdb.exe" goto noJdk
@@ -38,6 +46,6 @@ set JAVA_HOME=
 set JRE_HOME=%_PENTAHO_JAVA_HOME%
 
 :start
-shutdown.bat
+call startup
+:quit
 endlocal
-exit
